Instalação do nextjs com modelo de página pronto

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "criando um crud",
   "main": "index.js",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint \"./**/*.{jsx,jsx,ts,tsx}\"",
+    "lint:fix": "eslint \"./**/*.{jsx,jsx,ts,tsx}\" --fix",
     "start:crud": "npx ts-node ./core/crud.ts",
     "dev:crud": "nodemon --ext ts,tsx --exec \"npm run start:crud\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,12 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "next": "^13.4.19",
     "nodemon": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "@types/react": "^18.2.21",
     "@types/uuid": "^9.0.3"
   }
 }
